syntax = "proto3";

package xyz.block.ftl.deployment.v1;

import "xyz/block/ftl/v1/ftl.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/deployment/v1;ftlv1";
option java_multiple_files = true;

message GetDeploymentContextRequest {
  string deployment = 1;
}

message GetDeploymentContextResponse {
  enum DbType {
    DB_TYPE_UNSPECIFIED = 0;
    DB_TYPE_POSTGRES = 1;
    DB_TYPE_MYSQL = 2;
  }

  message DSN {
    string name = 1;
    DbType type = 2;
    string dsn = 3;
  }

  message Route {
    string deployment = 1;
    string uri = 2;
  }

  string module = 1;
  string deployment = 2;
  map<string, bytes> configs = 3;
  map<string, bytes> secrets = 4;
  repeated DSN databases = 5;
  repeated Route routes = 6;
}

// ModuleService is the service that modules use to interact with the Controller.
service DeploymentService {
  // Ping service for readiness.
  rpc Ping(xyz.block.ftl.v1.PingRequest) returns (xyz.block.ftl.v1.PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Get configuration state for the deployment
  rpc GetDeploymentContext(GetDeploymentContextRequest) returns (stream GetDeploymentContextResponse);
}
